# LunarLog

./: .codecov.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  conanfile.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: CMakeLists.txt  bench_e2e.cpp  bench_enrichers.cpp  bench_filtering.cpp  bench_formatting.cpp  bench_sinks.cpp  bench_throughput.cpp  null_sink.hpp
cmake/: LunarLogConfig.cmake.in
examples/: async_sink.cpp  basic_usage.cpp  batched_sink.cpp  color_console.cpp  compact_filter  compact_filter.cpp  context_capture.cpp  culture_formatting.cpp  custom_formatter.cpp  custom_sink.cpp  dynamic_level.cpp  enrichers.cpp  exception_attachment.cpp  filtering.cpp  fluent_builder.cpp  format_specifiers.cpp  http_sink.cpp  multi_sink.cpp  named_sinks.cpp  operators.cpp  output_template.cpp  pipe_transforms.cpp  rate_limiting.cpp  rolling_file.cpp  scoped_context  scoped_context.cpp  source_location_macros.cpp  structured_output.cpp  sub_logger.cpp  syslog_sink.cpp  tag_routing.cpp  thread_safety.cpp
include/: lunar_log.hpp  lunar_log_common.hpp  lunar_log_console_sink.hpp  lunar_log_file_sink.hpp  lunar_log_sink_factory.hpp  lunar_log_sink_interface.hpp  lunar_log_source.hpp
include/lunar_log/: global.hpp  log_manager.hpp  log_source.hpp  logger_configuration.hpp  macros.hpp
include/lunar_log/core/: compact_filter.hpp  config_watcher.hpp  enricher.hpp  exception_info.hpp  filter_rule.hpp  json_parser.hpp  level_switch.hpp  log_common.hpp  log_entry.hpp  log_level.hpp  output_template.hpp  rolling_policy.hpp  shared_mutex.hpp  sink_proxy.hpp
include/lunar_log/formatter/: compact_json_formatter.hpp  formatter_interface.hpp  human_readable_formatter.hpp  json_detail.hpp  json_formatter.hpp  xml_formatter.hpp
include/lunar_log/sink/: async_sink.hpp  batched_sink.hpp  callback_sink.hpp  color_console_sink.hpp  console_sink.hpp  file_sink.hpp  http_sink.hpp  rolling_file_sink.hpp  sink_interface.hpp  sub_logger_sink.hpp  syslog_sink.hpp
include/lunar_log/transform/: pipe_transform.hpp
include/lunar_log/transport/: file_transport.hpp  stdout_transport.hpp  transport_interface.hpp
packaging/conan/: conandata.yml  conanfile.py
ports/lunarlog/: portfile.cmake  vcpkg.json
single_include/: lunar_log.hpp
test/tests/: test_additional.cpp  test_alignment_padding.cpp  test_async_sink.cpp  test_basic_logging.cpp  test_batched_sink.cpp  test_callback_sink.cpp  test_color_console_sink.cpp  test_compact_filter.cpp  test_compact_json_formatter.cpp  test_console_stream.cpp  test_context_capture.cpp  test_culture_formatting.cpp  test_custom_formatter.cpp  test_dynamic_config.cpp  test_edge_cases.cpp  test_enrichers.cpp  test_escaped_brackets.cpp  test_exception_attachment.cpp  test_file_transport.cpp  test_filtering.cpp  test_fluent_builder.cpp  test_global_logger.cpp  test_http_sink.cpp  test_indexed_parameters.cpp  test_json_formatter.cpp  test_key_value_args.cpp  test_log_levels.cpp  test_multiple_sinks.cpp  test_named_sinks.cpp  test_no_macros.cpp  test_operators.cpp  test_output_template.cpp  test_pipe_transforms.cpp  test_placeholder_validation.cpp  test_rate_limiting.cpp  test_rolling_file.cpp  test_round7_fixes.cpp  test_scoped_context.cpp  test_source_location_macros.cpp  test_sub_logger_sink.cpp  (+6 more)
test/tests/utils/: test_utils.cpp  test_utils.hpp
tests/: test_lunar_log.cpp
tools/: generate_single_header.py  merge_files.py
